# enginator

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
enginator/: constants.py  lib.py
enginator/schemas/: __init__.py  base.py  gsheets.py  lib.py  postgres.py
sqlalchemy_url_builder/schemas/: base.py  gsheets.py  lib.py  postgres.py
tests/: __init__.py  lib_test.py
tests/schemas/: base_test.py  gsheets_test.py  postgres_test.py
