[project]
name = "sqlalchemy-url-builder"
version = "0.0.1"
description = "Build SQLAlchemy engine URLs from parameters"
readme = "README.md"
authors = [{name = "Beto Dealmeida"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "marshmallow",
    "sqlalchemy",
    "apispec",
]
requires-python = ">3.7"

[project.urls]
homepage = "https://github.com/datajunction/sqlalchemy-url-builder"
Changelog = "https://github.com/datajunction/sqlalchemy-url-builder/releases"
Issues = "https://github.com/datajunction/sqlalchemy-url-builder/issues"
CI = "https://github.com/datajunction/sqlalchemy-url-builder/actions"

[project.optional-dependencies]
test = ["pytest"]
development = ["Flake8-pyproject"]

[tool.flake8]
#ignore = ['E231', 'E241']
#per-file-ignores = [
#    '__init__.py:F401',
#]
max-line-length = 90
#count = true
